assets/css/custom-styles.css
/**
* Custom Innuendo Styles
*/

/* 1.0 Site-wide styles */

.clear {
	clear: both;
}

html body {
	letter-spacing: 0;
}

/* Front End media uploader styling fix */

.screen-reader-text {
	position: absolute;
	width: 1px;
	height: 1px;
	margin: -1px;
	padding: 0;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	border: 0;
}

/* 2.0 Navigation Bar / Header */

.navbar .nav-item-member-profile.login-link:before {
    background: none repeat scroll 0 0 #505050;
    height: 40%;
}

.navbar-brand {
	margin: 0 2rem;
}

.noo-navbar-collapse .menu-item-post-btn {
	padding-bottom: 2rem;
}

@media (min-width: 992px) {

	.noo-navbar-collapse .menu-item-post-btn {
		padding-bottom: 0;
	}

	.noo-navbar-collapse.collapse {
		width: 100%;
		border-top: 1px solid #262626;
		border-bottom: 1px solid #262626;
		padding: 0 2rem;
		background-color: #262626;
	}

	.noo-navbar-collapse  .navbar-nav > li > a {
		color: #fff;
		font-weight: 500;
	}

	.nav-item-member-profile.login-link:before {
	    background: none repeat scroll 0 0 #000;
	}

	.noo-navbar-collapse.collapse  .navbar-nav > li > a:hover {
		color: #ff0080;
	}

	.noo-navbar-collapse.collapse .nav-item-member-profile.register-link a {
		background: #000;
	}

	.menu-item-post-btn a {
		font-family: "Oswald",sans-serif!important;
		font-weight: 500!important;
	}


	.navbar:not(.navbar-shrink) .noo-navbar-collapse.collapse .navbar-nav > li > a {
	    line-height: 55px;
	}
}

/* 3.0 Landing Page */

.noo-job-search-wrapper .job-advanced-search {
	background-color: rgba(255,255,255,0.8);
	border-radius: 5px;
	padding-top: 20px;
}

.noo-job-search-wrapper .job-advanced-search .job-advanced-search-form {
	background: none;
}

.noo-job-search-wrapper .job-advanced-search .btn-search-submit {
	background-color: #ff0080;
}

.noo-job-search-wrapper .form-group .chosen-container-multi .chosen-choices {
	display: inline-flex;
	align-items: center;
}

.noo-job-search-wrapper .chosen-container-multi .chosen-choices li.search-choice {
	margin-top: 11px;
}

@media (max-width: 991px) {
	.job-advanced-search .job-advanced-search-form {
	    display: block;
	    height: auto;
	    background: transparent;
	}
}

@media (min-width: 768px) and (max-width: 991px) {
	.noo-job-search-wrapper .job-advanced-search .job-advanced-search-form .form-group {
		display: block;
		max-width: 100%;
		padding: 5px;
	}

	.noo-job-search-wrapper .job-advanced-search .form-action {
		width: 100%;
		display: block;
	}
}

.wpb_wrapper .company-letters {
	border-top: 1px solid #f2efef;
	border-bottom: 1px solid #f2efef;
}

body .wpb_wrapper .company-list .company-item {
	border: 1px solid #f2efef;
}

/* 4.0 Employer / Candidate Dashboard */

.jpanel-body .account-actions {
	margin: 0 auto 50px auto;
	display: table;
}

.noo-pricing-table .noo-pricing-column .pricing-content .pricing-info .short-desc ul {
	list-style: disc;
	padding-left: 15px;
}

/* 5.0 Single Job Page */

.job-action.sidebar-action {
	margin-top: 0;
	text-transform: uppercase;
}

/* 6.0 Job Feed / Company Feed */

